[yurong] feat: divide people and show group

--- a/src/App/component/peopleGroup/group.scss
+++ b/src/App/component/peopleGroup/group.scss
@@ -22,3 +22,11 @@
   background-color: $gray;
   border: none;
 }
+
+.group-people{
+  text-align: center;
+    padding-top: 15px;
+    padding-left: 15px;
+    border: 1px solid;
+    border-color: $gray;
+}
